fix(section/electricity/switch): z-index issue

--- a/blocks/electricity-section.css
+++ b/blocks/electricity-section.css
@@ -2,11 +2,11 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.8);
   display: none;
-  z-index: 2;
+  z-index: 9;
   pointer-events: none;
 }
 
@@ -17,15 +17,14 @@
   display: flex;
   align-items: center;
   position: relative;
-  background-repeat: no-repeat;
   z-index: 1;
+  background-repeat: no-repeat;
 }
 
 .electricity__content {
   max-width: 721px;
   padding: 20px;
   margin: 0 0 0 139px;
-  z-index: 2;
 }
 
 .electricity__heading {
@@ -62,25 +61,19 @@
   align-items: center;
   margin: 60px 50px 40px;
   gap: 50px;
-  z-index: 3;
+  z-index: 400;
   position: relative;
 }
 
+.electricity__switch {
+}
 .electricity__switch_on {
   width: 90px;
   cursor: pointer;
-  position: relative;
-  z-index: 4;
 }
 
 .form__electricity {
   margin: 95px 0 139px 0;
-}
-
-.electricity__heading,
-.electricity__subheading,
-.electricity__description {
-  z-index: 0;
 }
 
 @media (max-width: 1270px) {
