--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,6 @@
 .footer {
-  max-width: 100%;
+  max-width: 1440;
+  width: 100dvw;
   min-height: 25dvh;
   color: var(--text);
   padding: 40px 20px;
